--- a/index.html
+++ b/index.html
@@ -23,6 +23,9 @@
             padding: 40px 15px;
             text-align: center;
         }
+        {
+            image-orientation: from-image;
+        }
     </style>
 
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
