--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
 <div class="container">
     <div class="row">
         <div class="starter-template">
-            <h1>Drawings</h1>
+            <h1>Drawings 2017</h1>
 
             <p class="lead"></p>
                 <p style="text-align:center">
@@ -93,7 +93,7 @@
 <div class="container">
     <div class="row">
         <div class="starter-template">
-            <h1>Drawings</h1>
+            <h1>Drawings 2016</h1>
 
             <p class="lead">Hello from thomas</p>
                 <p style="text-align:center">
