--- a/index.html
+++ b/index.html
@@ -64,15 +64,13 @@
 
 <!-- Page Content -->
 <div class="container">
-  <h2>Image Gallery</h2>
-  <p>The .thumbnail class can be used to display an image gallery.</p>
-  <p>The .caption class adds proper padding and a dark grey color to text inside thumbnails.</p>
-  <p>Click on the images to enlarge them.</p>
+  <h2>Drawings 2017</h2>
+  <p></p>
   <div class="row">
     <div class="col-md-4">
       <div class="thumbnail">
-        <a href="/w3images/lights.jpg" target="_blank">
-          <img src="/w3images/lights.jpg" alt="Lights" style="width:100%">
+        <a href="images/charcoal_nov_2017.JPG" target="_blank">
+          <img src="images/charcoal_nov_2017.JPG" alt="Lights" style="width:100%">
           <div class="caption">
             <p>Lorem ipsum donec id elit non mi porta gravida at eget metus.</p>
           </div>
@@ -81,8 +79,8 @@
     </div>
     <div class="col-md-4">
       <div class="thumbnail">
-        <a href="/w3images/nature.jpg" target="_blank">
-          <img src="/w3images/nature.jpg" alt="Nature" style="width:100%">
+        <a href="images/bust_nov_2017.JPG" target="_blank">
+          <img src="images/bust_nov_2017.JPG" alt="Nature" style="width:100%">
           <div class="caption">
             <p>Lorem ipsum donec id elit non mi porta gravida at eget metus.</p>
           </div>
