--- a/index.html
+++ b/index.html
@@ -68,7 +68,8 @@
     <div class="starter-template">
         <p class="lead"></p>
             <p style="text-align:center">
-            <img src="images/difference.JPG" alt="image" style='padding:1px; border:1px solid #021a40; width: 20%; height: 20%'></p>
+            <img src="images/difference.JPG" alt="image" 
+                 style='padding:1px; border:2px solid #021a40; width: 50%; height: 50%'></p>
             <br><br>
     </div>
 </div>
@@ -82,7 +83,7 @@
     <div class="col-md-4">
       <div class="thumbnail">
         <a href="images/charcoal_nov_2017.JPG" target="_blank">
-          <img src="images/charcoal_nov_2017.JPG" alt="Lights" style="width:100%">
+          <img src="images/charcoal_nov_2017.JPG" alt="image 2017" style="width:100%">
           <div class="caption">
             <p>Lorem ipsum donec id elit non mi porta gravida at eget metus.</p>
           </div>
@@ -92,7 +93,7 @@
     <div class="col-md-4">
       <div class="thumbnail">
         <a href="images/bust_nov_2017.JPG" target="_blank">
-          <img src="images/bust_nov_2017.JPG" alt="Nature" style="width:100%">
+          <img src="images/bust_nov_2017.JPG" alt="image 2017" style="width:100%">
           <div class="caption">
             <p>Lorem ipsum donec id elit non mi porta gravida at eget metus.</p>
           </div>
@@ -101,8 +102,8 @@
     </div>
     <div class="col-md-4">
       <div class="thumbnail">
-        <a href="/w3images/fjords.jpg" target="_blank">
-          <img src="/w3images/fjords.jpg" alt="Fjords" style="width:100%">
+        <a href="images/bust_nov_2017.JPG" target="_blank">
+          <img src="images/bust_nov_2017.JPG" alt="image 2017" style="width:100%">
           <div class="caption">
             <p>Lorem ipsum donec id elit non mi porta gravida at eget metus.</p>
           </div>
