--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
         <p class="lead"></p>
             <p style="text-align:center">
             <img src="images/difference.JPG" alt="image" 
-                 style='padding:1px; border:2px solid #021a40; width: 50%; height: 50%'></p>
+                 style='padding:1px; border:4px solid #021a40; width: 60%; height: 60%'></p>
             <br><br>
     </div>
 </div>
@@ -102,8 +102,8 @@
     </div>
     <div class="col-md-4">
       <div class="thumbnail">
-        <a href="images/bust_nov_2017.JPG" target="_blank">
-          <img src="images/bust_nov_2017.JPG" alt="image 2017" style="width:100%">
+        <a href="images/facade.JPG" target="_blank">
+          <img src="images/facade.JPG" alt="image 2017" style="width:100%">
           <div class="caption">
             <p>Lorem ipsum donec id elit non mi porta gravida at eget metus.</p>
           </div>
