--- a/index.html
+++ b/index.html
@@ -112,6 +112,45 @@
     </div>
   </div>
 </div>
+
+<!-- Page Content -->
+<div class="container">
+  <h2>Drawings 2015</h2>
+  <p></p>
+  <div class="row">
+    <div class="col-md-4">
+      <div class="thumbnail">
+        <a href="images/charcoal_nov_2017.JPG" target="_blank">
+          <img src="images/charcoal_nov_2017.JPG" alt="image 2017" style="width:100%">
+          <div class="caption">
+            <p>Lorem ipsum donec id elit non mi porta gravida at eget metus.</p>
+          </div>
+        </a>
+      </div>
+    </div>
+    <div class="col-md-4">
+      <div class="thumbnail">
+        <a href="images/bust_nov_2017.JPG" target="_blank">
+          <img src="images/bust_nov_2017.JPG" alt="image 2017" style="width:100%">
+          <div class="caption">
+            <p>Lorem ipsum donec id elit non mi porta gravida at eget metus.</p>
+          </div>
+        </a>
+      </div>
+    </div>
+    <div class="col-md-4">
+      <div class="thumbnail">
+        <a href="images/facade.JPG" target="_blank">
+          <img src="images/facade.JPG" alt="image 2017" style="width:100%">
+          <div class="caption">
+            <p>Lorem ipsum donec id elit non mi porta gravida at eget metus.</p>
+          </div>
+        </a>
+      </div>
+    </div>
+  </div>
+</div>
+    
     
 <div class="container">
     <div class="row">
