--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
         <p class="lead"></p>
             <p style="text-align:center">
             <img src="images/difference.JPG" alt="image" 
-                 style='padding:1px; border:4px solid #021a40; width: 60%; height: 60%'></p>
+                 style='padding:1px; border:4px solid #021a40; width: 70%; height:70%'></p>
             <br><br>
     </div>
 </div>
@@ -115,13 +115,13 @@
 
 <!-- Page Content -->
 <div class="container">
-  <h2>Drawings 2015</h2>
+  <h2>Drawings 2016</h2>
   <p></p>
   <div class="row">
     <div class="col-md-4">
       <div class="thumbnail">
-        <a href="images/charcoal_nov_2017.JPG" target="_blank">
-          <img src="images/charcoal_nov_2017.JPG" alt="image 2017" style="width:100%">
+        <a href="images/difference.JPG" target="_blank">
+          <img src="images/difference.JPG" alt="image 2016" style="width:100%">
           <div class="caption">
             <p>Lorem ipsum donec id elit non mi porta gravida at eget metus.</p>
           </div>
@@ -130,25 +130,15 @@
     </div>
     <div class="col-md-4">
       <div class="thumbnail">
-        <a href="images/bust_nov_2017.JPG" target="_blank">
-          <img src="images/bust_nov_2017.JPG" alt="image 2017" style="width:100%">
+        <a href="images/reconcil.JPG" target="_blank">
+          <img src="images/reconcil.JPG" alt="image 2016" style="width:100%">
           <div class="caption">
             <p>Lorem ipsum donec id elit non mi porta gravida at eget metus.</p>
           </div>
         </a>
       </div>
     </div>
-    <div class="col-md-4">
-      <div class="thumbnail">
-        <a href="images/facade.JPG" target="_blank">
-          <img src="images/facade.JPG" alt="image 2017" style="width:100%">
-          <div class="caption">
-            <p>Lorem ipsum donec id elit non mi porta gravida at eget metus.</p>
-          </div>
-        </a>
-      </div>
-    </div>
-  </div>
+   </div>
 </div>
     
     
