--- a/index.html
+++ b/index.html
@@ -147,6 +147,16 @@
         </a>
       </div>
     </div>
+    <div class="col-md-4">
+      <div class="thumbnail">
+        <a href="images/reconcil.JPG" target="_blank">
+          <img src="images/reconcil.JPG" alt="image 2016" style="width:100%">
+          <div class="caption">
+            <p>Lorem ipsum donec id elit non mi porta gravida at eget metus.</p>
+          </div>
+        </a>
+      </div>
+    </div>
    </div>
 </div>
     
