--- a/index.html
+++ b/index.html
@@ -93,8 +93,8 @@
                               
     <div class="col-sm-6 col-md-3">
       <div class="thumbnail">
-        <a href="images/bust2.JPG" target="_blank">
-          <img src="images/bust2.JPG" alt="image 2017" style="width:100%">
+        <a href="images/face.png" target="_blank">
+          <img src="images/face.png" alt="image 2017" style="width:100%">
           <div class="caption">
             <p>Lorem ipsum donec id elit non mi porta gravida at eget metus.</p>
           </div>
@@ -137,8 +137,8 @@
                               
     <div class="col-sm-6 col-md-3">
       <div class="thumbnail">
-        <a href="images/face.png" target="_blank">
-          <img src="images/face.png" alt="image 2017" style="width:100%">
+        <a href="images/animals_tutu.JPG" target="_blank">
+          <img src="images/animals_tutu.JPG" alt="image 2017" style="width:100%">
           <div class="caption">
             <p>Lorem ipsum donec id elit non mi porta gravida at eget metus.</p>
           </div>
@@ -200,8 +200,8 @@
     </div>
     <div class="col-md-4">
       <div class="thumbnail">
-        <a href="images/reconcil.JPG" target="_blank">
-          <img src="images/reconcil.JPG" alt="image 2016" style="width:100%">
+        <a href="images/bust2.JPG" target="_blank">
+          <img src="images/bust2.JPG" alt="image 2016" style="width:100%">
           <div class="caption">
             <p>Lorem ipsum donec id elit non mi porta gravida at eget metus.</p>
           </div>
