--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
         <a href="images/animals_tutu.JPG" target="_blank">
           <img src="images/animals_tutu.JPG" alt="image 2017" style="width:100%">
           <div class="caption">
-            <p>Lorem ipsum donec id elit non mi porta gravida at eget metus.</p>
+            <p>Animals in tutu</p>
           </div>
         </a>
       </div>
@@ -151,7 +151,7 @@
         <a href="images/foot.JPG" target="_blank">
           <img src="images/foot.JPG" alt="image 2017" style="width:100%">
           <div class="caption">
-            <p>Lorem ipsum donec id elit non mi porta gravida at eget metus.</p>
+            <p>Funny footballers</p>
           </div>
         </a>
       </div>
