--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
     
 <!-- Page Content -->
 <div class="container">
-  <h2>Drawings 2017</h2>
+  <h2></h2>
   <p></p>
   <div class="row">
       
@@ -140,7 +140,7 @@
         <a href="images/animals_tutu.JPG" target="_blank">
           <img src="images/animals_tutu.JPG" alt="image 2017" style="width:100%">
           <div class="caption">
-            <p>Animals in tutu</p>
+            <p>Animals in tutus</p>
           </div>
         </a>
       </div>
