--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
         <div class="collapse navbar-collapse">
             <ul class="nav navbar-nav">
                 <li class="active"><a href="#">Home</a></li>
-                <li><a href="mailto:amunategui@gmail.com?subject=Art Feedback">Contact</a></li>
+                <li><a href="mailto:amunategui@gmail.com?subject=Art Feedback">Feedback</a></li>
             </ul>
         </div>
         <!--/.nav-collapse -->
