--- a/index.html
+++ b/index.html
@@ -259,7 +259,7 @@
       
     <div class="col-sm-6 col-md-3">
       <div class="thumbnail">
-          <img src="images/owl.JPG" alt="image 2017" style="width:100%"  
+          <img src="images/owl2.JPG" alt="image 2017" style="width:100%"  
                data-toggle="modal" data-target="#myModal">
           <div class="caption">
             <p></p>
