--- a/index.html
+++ b/index.html
@@ -29,43 +29,7 @@
     </style>
 
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
-    <!-- WARNING: Respond.js doesn't work if you
-<!-- Page Content row 9 - landsacpe -->
-<div class="container">
-  <h2></h2>
-  <p></p>
-  <div class="row">
-    <div class="col-md-4">
-      <div class="thumbnail">
-         <img src="images/crazy.JPG" alt="image 2017" style="width:100%"
-               data-toggle="modal" data-target="#myModal">
-          <div class="caption">
-            <p></p>
-          </div>
-        </div>
-    </div>
-    <div class="col-md-4">
-      <div class="thumbnail">
-          <img src="images/faces.JPG" alt="image 2017" style="width:100%"
-               data-toggle="modal" data-target="#myModal">
-          <div class="caption">
-            <p></p>
-          </div>
-       </div>
-    </div>
-    <div class="col-md-4">
-      <div class="thumbnail">
-        <img src="images/men.JPG" alt="image 2017" style="width:100%"
-               data-toggle="modal" data-target="#myModal">
-          <div class="caption">
-            <p></p>
-          </div>
-      </div>
-    </div>
-   </div>
-</div>
-    
-    view the page via file:// -->
+    <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
     <!--[if lt IE 9]>
     <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
     <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
