--- a/index.html
+++ b/index.html
@@ -62,6 +62,40 @@
     <!-- /.container -->
 </nav>
         
+<!-- Page Content row 0 - landsacpe -->
+<div class="container">
+  <h2></h2>
+  <p></p>
+  <div class="row">
+    <div class="col-md-4">
+      <div class="thumbnail">
+         <img src="images/scape.PNG" alt="image 2017" style="width:100%"
+               data-toggle="modal" data-target="#myModal">
+          <div class="caption">
+            <p></p>
+          </div>
+        </div>
+    </div>
+    <div class="col-md-4">
+      <div class="thumbnail">
+          <img src="images/funnel.PNG" alt="image 2017" style="width:100%"
+               data-toggle="modal" data-target="#myModal">
+          <div class="caption">
+            <p></p>
+          </div>
+       </div>
+    </div>
+    <div class="col-md-4">
+      <div class="thumbnail">
+        <img src="images/hand.JPG" alt="image 2017" style="width:100%"
+               data-toggle="modal" data-target="#myModal">
+          <div class="caption">
+            <p></p>
+          </div>
+      </div>
+    </div>
+   </div>
+</div>
         
 <!-- Page Content row 1 -->
 <div class="container">
@@ -621,7 +655,7 @@
     </div>
     <div class="col-md-4">
       <div class="thumbnail">
-          <img src="images/hand.JPG" alt="image 2017" style="width:100%"
+          <img src="images/hand_face.JPG" alt="image 2017" style="width:100%"
                data-toggle="modal" data-target="#myModal">
           <div class="caption">
             <p></p>
