--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
   <div class="row">
     <div class="col-md-4">
       <div class="thumbnail">
-         <img src="images/scape.PNG" alt="image 2017" style="width:100%"
+         <img src="images/scape.png" alt="image 2017" style="width:100%"
                data-toggle="modal" data-target="#myModal">
           <div class="caption">
             <p></p>
@@ -78,7 +78,7 @@
     </div>
     <div class="col-md-4">
       <div class="thumbnail">
-          <img src="images/funnel.PNG" alt="image 2017" style="width:100%"
+          <img src="images/funnel.png" alt="image 2017" style="width:100%"
                data-toggle="modal" data-target="#myModal">
           <div class="caption">
             <p></p>
