--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
         
 <!-- Page Content row 0 landsacpe -->
 <div class="container">
-  <h2></h2>
+  <h2>Drawings 2018</h2>
   <p></p>
   <div class="row">
     <div class="col-md-4">
@@ -80,7 +80,7 @@
     </div>
     <div class="col-md-4">
       <div class="thumbnail">
-          <img src="images/strong-face.jpg" alt="image 2018" style="width:100%"
+          <img src="images/zipping-across-us.jpg" alt="image 2018" style="width:100%"
                data-toggle="modal" data-target="#myModal">
           <div class="caption">
             <p></p>
@@ -89,7 +89,7 @@
     </div>
     <div class="col-md-4">
       <div class="thumbnail">
-        <img src="images/zipping-across-us.jpg" alt="image 2018" style="width:100%"
+        <img src="images/strong-face.jpg" alt="image 2018" style="width:100%"
                data-toggle="modal" data-target="#myModal">
           <div class="caption">
             <p></p>
